2010-01-31 18:21:50 fraggle
	
	Change Windows resource file to use PACKAGE_COPYRIGHT and
	PACKAGE_LICENSE macros.

2010-01-30 16:14:04 fraggle
	
	Change directory to home directory before launching the game, so that
	recorded demos go somewhere sensible.

2010-01-30 16:04:24 fraggle
	
	Set launch button as default button, so that it is possible to launch
	the game by pressing return.

2010-01-30 00:37:17 fraggle
	
	Rename mus2mid functions to be consistent with coding standard.

2010-01-29 23:28:35 fraggle
	
	Remove unused PACKAGE_LONGDESC.

2010-01-29 19:17:56 fraggle
	
	When doing a MUS to MID conversion, allocate MIDI channels so that the
	lowest-numbered MIDI channels are used before higher-numbered ones.
	Fixes ear-piercing whistle sound in the MAP05 music when playing with
	timidity and EAWPATS (thanks entryway / HackNeyed).

2010-01-29 03:55:20 fraggle
	
	Fix indentation/style etc.  in mus2mid.c.

2010-01-27 19:16:26 fraggle
	
	Add tags files to svn:ignore properties.

2010-01-26 19:21:18 fraggle
	
	Minor fix of British spelling -> American.

2010-01-26 19:18:18 fraggle
	
	Fix glass hack windows where a linedef is flagged as two sided but has
	only one side.  Fixes WADs such as OTTAWAU.WAD (thanks Never_Again).

2010-01-23 23:06:45 fraggle
	
	Add menu item to launcher to open a terminal window that can be used
	to start the game.  Add missing 'edit' menu.  Set svn:ignore property
	for osx directory.

2010-01-18 19:40:50 fraggle
	
	Fix package source URL.

2010-01-18 19:29:48 fraggle
	
	Tweak package description slightly.

2010-01-18 19:14:54 fraggle
	
	Define project short description, copyright, maintainer and URL in
	configure.in.  Use these for the Info-gnustep.plist file.  Add
	generated .spec file for building RPM packages.

2010-01-17 16:58:37 fraggle
	
	Update NEWS.

2010-01-17 16:31:03 fraggle
	
	Restore the original cursor when shutting down video code, this should
	hopefully fix the problem with the mouse cursor disappearing when