@@ -67,6 +67,89 @@ typedef enum
     TXT_COLOR_BRIGHT_WHITE,
 } txt_color_t;
 
+// GhostlyDeath <June 28, 2010> -- I really don't know what fraggle was thinkin'
+//     but I like my way better
+
+/* Port Specific */
+				/*** CHOCOLATE DOOM ***/
+#if defined(_SETUP_CHOCOLATE_COLORS)
+	/* Single Sets */
+	#define TXT_COLORSET_TITLEBANNERFG				TXT_COLOR_BLACK
+	#define TXT_COLORSET_TITLEBANNERBG				TXT_COLOR_GREY
+	#define TXT_COLORSET_FRAMEFG					TXT_COLOR_BRIGHT_CYAN
+	#define TXT_COLORSET_FRAMEBG					TXT_COLOR_BLUE
+	#define TXT_COLORSET_TITLEFG					TXT_COLOR_BLUE
+	#define TXT_COLORSET_TITLEBG					TXT_COLOR_GREY
+	#define TXT_COLORSET_SCROLLFG					TXT_COLOR_BLACK
+	#define TXT_COLORSET_SCROLLBG					TXT_COLOR_GREY
+	#define TXT_COLORSET_LABELFG					TXT_COLOR_BRIGHT_WHITE
+	#define TXT_COLORSET_LABELBG					TXT_COLOR_BLUE
+	#define TXT_COLORSET_BUTTONFG					TXT_COLOR_BRIGHT_WHITE
+	#define TXT_COLORSET_BUTTONBG					TXT_COLOR_BLUE
+	#define TXT_COLORSET_TEXTBOXFG					TXT_COLOR_BRIGHT_WHITE
+	#define TXT_COLORSET_TEXTBOXBG					TXT_COLOR_BLUE
+	#define TXT_COLORSET_SHADOWCOLOR				TXT_COLOR_DARK_GREY
+	#define TXT_COLORSET_SELECTEDBG					TXT_COLOR_GREY
+	#define TXT_COLORSET_EDITINGBOXBG				TXT_COLOR_BLACK
+	#define TXT_COLORSET_CHECKBOXSIDEFG				TXT_COLOR_BRIGHT_CYAN
+	#define TXT_COLORSET_CHECKBOXPEGFG				TXT_COLOR_BRIGHT_WHITE
+	#define TXT_COLORSET_ASCIIFG					TXT_COLOR_BRIGHT_WHITE
+	#define TXT_COLORSET_ASCIIBG					TXT_COLOR_BLACK
+	#define TXT_COLORSET_LABELEDSEPFG				TXT_COLOR_BRIGHT_GREEN
+	#define TXT_COLORSET_LABELEDSEPBG				TXT_COLOR_BLUE
+	#define TXT_COLORSET_ACTIONKEYFG				TXT_COLOR_BRIGHT_GREEN
+	#define TXT_COLORSET_ACTIONEQUALFG				TXT_COLOR_BRIGHT_CYAN
+	#define TXT_COLORSET_ACTIONACTIONFG				TXT_COLOR_BRIGHT_WHITE
+	#define TXT_COLORSET_NETPLAYERNAMEFG			TXT_COLOR_BRIGHT_WHITE
+	#define TXT_COLORSET_MYNETPLAYERNAMEFG			TXT_COLOR_YELLOW
+	#define TXT_COLORSET_KEYSELFG					TXT_COLOR_BRIGHT_WHITE
+	#define TXT_COLORSET_KEYSELBG					TXT_COLOR_BLUE
+	#define TXT_COLORSET_NUMBERLISTFG				TXT_COLOR_BRIGHT_CYAN
+	
+	/* Dual Sets */
+	#define TXT_COLORSET_BACKGROUND					TXT_COLOR_GREY | (TXT_COLOR_BLUE << 4)
+#else		/*** STRAWBERRY DOOM ***/
+	/* Single Sets */
+	#define TXT_COLORSET_TITLEBANNERFG				TXT_COLOR_BRIGHT_RED
+	#define TXT_COLORSET_TITLEBANNERBG				TXT_COLOR_BLACK
+	#define TXT_COLORSET_FRAMEFG					TXT_COLOR_YELLOW
+	#define TXT_COLORSET_FRAMEBG					TXT_COLOR_RED
+	#define TXT_COLORSET_TITLEFG					TXT_COLOR_YELLOW
+	#define TXT_COLORSET_TITLEBG					TXT_COLOR_RED
+	#define TXT_COLORSET_SCROLLFG					TXT_COLOR_BRIGHT_RED
+	#define TXT_COLORSET_SCROLLBG					TXT_COLOR_RED
+	#define TXT_COLORSET_LABELFG					TXT_COLOR_BRIGHT_RED
+	#define TXT_COLORSET_LABELBG					TXT_COLOR_RED
+	#define TXT_COLORSET_BUTTONFG					TXT_COLOR_BRIGHT_WHITE
+	#define TXT_COLORSET_BUTTONBG					TXT_COLOR_RED
+	#define TXT_COLORSET_TEXTBOXFG					TXT_COLOR_YELLOW
+	#define TXT_COLORSET_TEXTBOXBG					TXT_COLOR_BROWN
+	#define TXT_COLORSET_SHADOWCOLOR				TXT_COLOR_DARK_GREY
+	#define TXT_COLORSET_SELECTEDBG					(TXT_COLOR_GREY | TXT_COLOR_BLINKING)
+	#define TXT_COLORSET_EDITINGBOXBG				TXT_COLOR_BLACK
+	#define TXT_COLORSET_CHECKBOXSIDEFG				TXT_COLOR_YELLOW
+	#define TXT_COLORSET_CHECKBOXPEGFG				TXT_COLOR_BRIGHT_GREEN
+	#define TXT_COLORSET_ASCIIFG					TXT_COLOR_BRIGHT_WHITE
+	#define TXT_COLORSET_ASCIIBG					TXT_COLOR_BLACK
+	#define TXT_COLORSET_LABELEDSEPFG				TXT_COLOR_BRIGHT_GREEN
+	#define TXT_COLORSET_LABELEDSEPBG				TXT_COLOR_RED
+	#define TXT_COLORSET_ACTIONKEYFG				TXT_COLOR_BRIGHT_GREEN
+	#define TXT_COLORSET_ACTIONEQUALFG				TXT_COLOR_YELLOW
+	#define TXT_COLORSET_ACTIONACTIONFG				TXT_COLOR_BRIGHT_WHITE
+	#define TXT_COLORSET_NETPLAYERNAMEFG			TXT_COLOR_BRIGHT_WHITE
+	#define TXT_COLORSET_MYNETPLAYERNAMEFG			TXT_COLOR_BRIGHT_BLUE
+	#define TXT_COLORSET_KEYSELFG					TXT_COLOR_BRIGHT_GREEN
+	#define TXT_COLORSET_KEYSELBG					TXT_COLOR_GREEN
+	#define TXT_COLORSET_NUMBERLISTFG				TXT_COLOR_BRIGHT_MAGENTA
+	
+	/* Dual Sets */
+	#define TXT_COLORSET_BACKGROUND					TXT_COLOR_BLACK | (TXT_COLOR_RED << 4)
+#endif
+
+/* Shared */
+	/* Dual Sets */
+	#define TXT_COLORSET_TOPBOTBANNER				TXT_COLORSET_TITLEBANNERFG | (TXT_COLORSET_TITLEBANNERBG << 4)
+
 // Initialize the screen
 // Returns 1 if successful, 0 if failed.
 
