@@ -65,8 +65,8 @@ static void TXT_SeparatorDrawer(TXT_UNCAST_ARG(separator), int selected)
     {
         TXT_GotoXY(x, y);
 
-        TXT_BGColor(TXT_COLOR_BLUE, 0);
-        TXT_FGColor(TXT_COLOR_BRIGHT_GREEN);
+        TXT_BGColor(TXT_COLORSET_LABELEDSEPBG, 0);
+        TXT_FGColor(TXT_COLORSET_LABELEDSEPFG);
         TXT_DrawString(" ");
         TXT_DrawString(separator->label);
         TXT_DrawString(" ");
